--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,63 @@
+
+# OS generated files #
+######################
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# from tex files #
+#################
+*.aux
+*.glo
+*.idx
+*.log
+*.toc
+*.ist
+*.acn
+*.acr
+*.alg
+*.bbl
+*.blg
+*.dvi
+*.glg
+*.gls
+*.ilg
+*.ind
+*.lof
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.synctex.gz
+*.pdf
+*.bst
+
+
+# Mac IDE files
+*.swp
+*~
+*(Autosaved).rtfd/
+Backup[ ]of[ ]*.pages/
+Backup[ ]of[ ]*.key/
+Backup[ ]of[ ]*.numbers/
+
+
+# R
+*.Rhistory
+*.RData
+*.Rda
+*.rds
+*.Rproj*
+*.Ruserdata
+
+
+## html
+*.css
+*.js
+*.ttf
+
+/.quarto/
