--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -18,7 +18,9 @@ jobs:
         uses: r-lib/actions/setup-r@v2
 
       - name: Install packages
-        run: Rscript -e 'install.packages(c("rmarkdown", "knitr", "jsonlite"))'
+        run: >
+          Rscript -e 'install.packages(c("rmarkdown", "knitr", "jsonlite",
+                                         "tidyverse"))'
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
