--- a/_quarto.yml
+++ b/_quarto.yml
@@ -8,6 +8,9 @@ project:
 #      - about.qmd
       - lessons/shell-intro/shell-intro.qmd
       - lessons/github/github-intro.qmd
+      - lessons/github/exercise1.qmd
+      - lessons/github/exercise2.qmd
+      - lessons/github/exercise3.qmd
       - lessons/r-lessons/r-intro.qmd
       - lessons/r-lessons/r-plotting.qmd
       - lessons/r-lessons/r-tidydata.qmd
