Add r intro lesson

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -49,7 +49,7 @@ format:
     css: styles.css
     toc: true
 
-callout-appearance: simple
+callout-appearance: default
 
 date: today
 date-format: iso
