--- a/_quarto.yml
+++ b/_quarto.yml
@@ -52,7 +52,7 @@ format:
     css: styles.css
     toc: true
 
-callout-appearance: simple
+callout-appearance: default
 
 date: today
 date-format: iso
