--- a/_quarto.yml
+++ b/_quarto.yml
@@ -11,6 +11,7 @@ project:
       - lessons/github/exercise1.qmd
       - lessons/github/exercise2.qmd
       - lessons/github/exercise3.qmd
+      - lessons/github/ssh_setup.qmd
       - lessons/r-lessons/r-intro.qmd
       - lessons/r-lessons/r-plotting.qmd
       - lessons/r-lessons/r-tidydata.qmd
